--- a/zdependencies-swt/pom.xml
+++ b/zdependencies-swt/pom.xml
@@ -10,4 +10,11 @@
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
 
+	<dependencies>
+		<dependency>
+			<groupId>org.eclipse.swt</groupId>
+			<artifactId>org.eclipse.swt.cocoa.macosx.x86_64_3.102.1.v20130827</artifactId>
+			<version>4.3.1</version>
+		</dependency>
+	</dependencies>
 </project>
